# super_dodge_ball

./: Cargo.toml
resources/: balls.json  keyboad_config.json  map.json  player_characters.json  player_characters.schema.json  textures.json
src/: error.rs  game.rs  main.rs
src/game/: animations.rs  ball.rs  draw_utilities.rs  field.rs  has_direction.rs  mod.rs  player.rs  resources.rs
src/game/ball/: animations.rs  mod.rs
src/game/character/: animations.rs
src/helpers/: mod.rs  text.rs
src/json/: helpers.rs  math.rs  mod.rs
