[package]
name = "super_dodge_ball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.13"
macroquad-particles = "0.1.1"
macroquad-platformer = "0.1.2"
macroquad-tiled = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
